--- a/index.html
+++ b/index.html
@@ -5,10 +5,44 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
         <title>SpotifyWeb</title>
     </head>
 
     <body>
+
+        <!-- intestazione pagina upgrade -->
+        <header>
+            <div class="upgrade">
+
+            </div>
+
+        </header>
+        <!-- /intestazione pagina upgrade  -->
+
+        <!-- corpo pagina  -->
+        <main>
+            <aside>
+
+
+            </aside>
+
+            <div class="section-album">
+
+
+            </div>
+
+
+
+
+        </main>
+        <!-- /corpo pagina  -->
+
+        <!-- piè di pagina  -->
+        <footer>
+
+        </footer>
+        <!-- piè di pagina  -->
 
     </body>
 
