add box-image + responsive

--- a/index.html
+++ b/index.html
@@ -25,27 +25,76 @@
         <!-- intestazione pagina upgrade -->
         <header>
             <div class="upgrade">
-
                 <button class="btn-upgrade">effettua l'upgrade</button>
-
-
-
             </div>
-
         </header>
         <!-- /intestazione pagina upgrade  -->
 
         <!-- corpo pagina  -->
         <main>
+
+
             <aside>
 
 
             </aside>
 
+            <!-- sezione album -->
             <div class="section-album">
+                <!-- menu navigazione  -->
+                <nav>
+                    <ul>
+                        <!-- !aggiungere trattino sotto link  -->
+                        <li><a href="#">in evidenza</a></li>
+                        <li><a href="#">podcast</a></li>
+                        <li><a href="#">classifiche</a></li>
+                        <li><a href="#">generi e mood</a></li>
+                        <li><a href="#">nuove uscite</a></li>
+                        <li><a href="#">scopri</a></li>
+                    </ul>
+                </nav>
+                <!-- /menu navigazione  -->
+
+                <section class="all">
+
+
+                    <h2>Recently played</h2>
+                    <section class="recently-played">
+
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/split.jpeg" alt="">
+
+                        </div>
+                    </section>
+
+                    <section class="create-for"></section>
+
+                    <section class="popular-artist"></section>
+                </section>
 
 
             </div>
+            <!-- /sezione album -->
 
 
 
