--- a/index.html
+++ b/index.html
@@ -56,40 +56,100 @@
                 <!-- /menu navigazione  -->
 
                 <section class="all">
+                    <div class="tag-play">
+                        <h2>Recently played</h2>
+                    </div>
 
-
-                    <h2>Recently played</h2>
-                    <section class="recently-played">
+                    <section class="played">
 
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/soul-hunters.jpg" alt="">
+                            <span class="titolo">Soul hunters</span>
+                            <br>
+                            <span class="small">Alberto Parmegiani</span>
+
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/single-petal.jpg" alt="">
+                            <span class="titolo">Single petal of a Rose</span>
+                            <br>
+                            <span class="small">Similia Jazz Ensemble</span>
+
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/thoughts.jpg" alt="">
+                            <span class="titolo">Thoughts in progress</span>
+                            <br>
+                            <span class="small">Mimmo Campanale</span>
+
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/doussoun.jpg" alt="">
+                            <span class="titolo">Doussoun'gouni</span>
+                            <br>
+                            <span class="small">Roberto Ottaviano</span>
+
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/amphibious.jpg" alt="">
+                            <span class="titolo">Amphibious</span>
+                            <br>
+                            <span class="small">Pasquale Buongiovanni</span>
+
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/split.jpeg" alt="">
+                            <img class="img-style" src="img/viverepiano.jpg" alt="">
+                            <div class="dati">
+                                <span class="titolo">Vivere Piano</span>
+                                <br>
+                                <span class="small">Orazio Saracino</span>
+                            </div>
+
 
                         </div>
                     </section>
+                    <div class="tag-play">
+                        <h2>Creato per Giuseppe Todisco</h2>
+                        <h4 class="small">Più ascolti, più accurati saranno i suggerimenti</h4>
+                    </div>
+                    <section class="played">
 
-                    <section class="create-for"></section>
+                        <div class="box-album">
+                            <img class="img-style" src="img/radar.jpeg" alt="">
+                            <span class="titolo">Release Radar</span>
 
-                    <section class="popular-artist"></section>
+                        </div>
+                        <div class="box-album">
+                            <img class="img-style" src="img/mixdaily.jpeg" alt="">
+                            <span class="titolo">daily Mix 1</span>
+
+                        </div>
+
+                    </section>
+
+                    <div class="tag-play">
+                        <h2>Artisti più popolari</h2>
+                        <h4 class="small">Più ascolti, più accurati saranno i suggerimenti</h4>
+                    </div>
+                    <section class="played">
+
+                        <div class="box-album">
+                            <img class="img-style img-style-radius" src="img/soul-hunters.jpg" alt="">
+                            <span class="titolo">Soul hunters</span>
+
+                        </div>
+                        <div class="box-album img">
+                            <img class="img-style img-style-radius" src="img/single-petal.jpg" alt="">
+                            <span class="titolo">Single petal of a Rose</span>
+
+                        </div>
+
+                    </section>
                 </section>
 
 
