--- a/index.html
+++ b/index.html
@@ -212,6 +212,48 @@
 
         <!-- piè di pagina  -->
         <footer>
+            <div class="container-footer">
+
+                <div class="album-playback">
+                    <div class="box-img">
+                        <img src="img/soul-hunters.jpg" alt="">
+                    </div>
+                    <span class="titolo">Soul hunters <br> <span class="small">C.L.U.</span></span>
+                    <div class="favorite">
+                        <a href=""><i class="fa-regular fa-heart"></i></a>
+                        <a href=""><i class="fa-regular fa-folder"></i></a>
+                    </div>
+
+
+
+                </div>
+                <div class="player">
+                    <div class="player-btn">
+                        <i class="small-player fa-solid fa-repeat"></i>
+                        <i class="small-player fa-solid fa-backward-step"></i>
+                        <i class="big-play fa-regular fa-circle-play"></i>
+                        <i class="small-player fa-solid fa-forward-step"></i>
+                        <i class="small-player fa-solid fa-rotate-right"></i>
+                    </div>
+                    <div class="box-play-bar">
+                        <span>0:25</span>
+                        <div class="play-bar">
+                            <div class="inside-play-bar"></div>
+                        </div>
+                        <span>4:35</span>
+                    </div>
+                </div>
+                <div class="option">
+                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-desktop"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                    <div class="play-bar">
+                        <div class="inside-play-bar"></div>
+                    </div>
+
+                </div>
+
+            </div>
 
         </footer>
         <!-- piè di pagina  -->
