add hover , fix barra riproduzione footer

--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
                     <div class="box-footer-aside">
                         <div class="box-download">
                             <img class="download" src="img/download.svg" alt="">
-                            <a href=""><span class="small">installa app</span></a>
+                            <a href="" class="small">installa app</a>
                         </div>
                         <hr>
                         <div class="box-profile">
-                            <img class="profile" src="img/profile.svg" alt=""><span class="titolo">Giuseppe</span>
+                            <img class="profile" src="img/profile.svg" alt="">
+                            <a href="" class="titolo">Giuseppe</a>
                         </div>
 
                     </div>
@@ -108,19 +109,24 @@
                     <div class="tag-play">
                         <h2>Recently played</h2>
                     </div>
-                    <!-- !aggiungere hover alle immagini  -->
+
                     <section class="played">
 
                         <div class="box-album">
-                            <img class="img-style" src="img/soul-hunters.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/soul-hunters.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
                             <span class="titolo">Soul hunters</span>
                             <br>
                             <span class="small">Alberto Parmegiani</span>
-
-
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/single-petal.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/single-petal.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Single petal of a Rose</span>
                             <br>
                             <span class="small">Similia Jazz Ensemble</span>
@@ -128,7 +134,11 @@
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/thoughts.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/thoughts.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Thoughts in progress</span>
                             <br>
                             <span class="small">Mimmo Campanale</span>
@@ -136,7 +146,11 @@
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/doussoun.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/doussoun.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Doussoun'gouni</span>
                             <br>
                             <span class="small">Roberto Ottaviano</span>
@@ -144,7 +158,11 @@
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/amphibious.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/amphibious.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Amphibious</span>
                             <br>
                             <span class="small">Pasquale Buongiovanni</span>
@@ -152,7 +170,11 @@
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/viverepiano.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/viverepiano.jpg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <div class="dati">
                                 <span class="titolo">Vivere Piano</span>
                                 <br>
@@ -170,12 +192,20 @@
                     <section class="played">
 
                         <div class="box-album">
-                            <img class="img-style" src="img/radar.jpeg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/radar.jpeg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Release Radar</span>
 
                         </div>
                         <div class="box-album">
-                            <img class="img-style" src="img/mixdaily.jpeg" alt="">
+                            <div class="image">
+                                <img class="img-style" src="img/mixdaily.jpeg" alt="">
+                                <div class="image-overlay"><i class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">daily Mix 1</span>
                         </div>
                     </section>
@@ -187,14 +217,23 @@
                         <h4 class="small">Più ascolti, più accurati saranno i suggerimenti</h4>
                     </div>
                     <section class="played">
-
                         <div class="box-album">
-                            <img class="img-style img-style-radius" src="img/soul-hunters.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style img-style-radius" src="img/soul-hunters.jpg" alt="">
+                                <div class="image-overlay img-style-radius"><i
+                                        class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Soul hunters</span>
 
                         </div>
                         <div class="box-album img">
-                            <img class="img-style img-style-radius" src="img/single-petal.jpg" alt="">
+                            <div class="image">
+                                <img class="img-style img-style-radius" src="img/single-petal.jpg" alt="">
+                                <div class="image-overlay img-style-radius"><i
+                                        class="big-play fa-regular fa-circle-play"></i></div>
+                            </div>
+
                             <span class="titolo">Single petal of a Rose</span>
 
                         </div>
@@ -223,10 +262,9 @@
                         <a href=""><i class="fa-regular fa-heart"></i></a>
                         <a href=""><i class="fa-regular fa-folder"></i></a>
                     </div>
-
-
-
                 </div>
+
+
                 <div class="player">
                     <div class="player-btn">
                         <i class="small-player fa-solid fa-repeat"></i>
@@ -238,15 +276,25 @@
                     <div class="box-play-bar">
                         <span>0:25</span>
                         <div class="play-bar">
-                            <div class="inside-play-bar"></div>
+                            <div class="inside-play-bar">
+                                <div class="circle-box">
+                                    <div class="circle">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <span>4:35</span>
                     </div>
                 </div>
+
+
                 <div class="option">
-                    <i class="fa-solid fa-bars"></i>
-                    <i class="fa-solid fa-desktop"></i>
-                    <i class="fa-solid fa-volume-high"></i>
+                    <div class="icon">
+                        <i class="fa-solid fa-bars"></i>
+                        <i class="fa-solid fa-desktop"></i>
+                        <i class="fa-solid fa-volume-high"></i>
+
+                    </div>
                     <div class="play-bar">
                         <div class="inside-play-bar"></div>
                     </div>
