add border home + fix media xs

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
 
             <!-- inizio aside  -->
             <aside>
+
+                <div class="box-logo">
+                    <img class="logo" src="img/logo-small.svg" alt=""><span class="titolo">Spotify</span>
+                </div>
+
+                <!-- !aggiungere bordo esterne sx home  -->
+                <div class="box-nav border">
+                    <img class="font-awesome" src="img/home.svg" alt="">
+                    <a href="#"><span class="small">home</span></a>
+                </div>
+                <div class="box-nav">
+                    <img class="font-awesome" src="img/search.svg" alt="">
+                    <a href="#"><span class="small">Cerca</span></a>
+                </div>
+                <div class="box-nav">
+                    <img class="font-awesome" src="img/libreria.svg" alt="">
+                    <a href="#"><span class="small">la tua libreria</span></a>
+                </div>
                 <div class="container-nav-aside">
-                    <div class="box-logo">
-                        <img class="logo" src="img/logo-small.svg" alt=""><span class="titolo">Spotify</span>
-                    </div>
-
-                    <!-- !aggiungere bordo esterne sx home  -->
-                    <div class="box-nav">
-                        <img class="font-awesome" src="img/home.svg" alt="">
-                        <a href="#"><span class=".small">home</span></a>
-                    </div>
-                    <div class="box-nav">
-                        <img class="font-awesome" src="img/search.svg" alt="">
-                        <a href="#"><span class=".small">Cerca</span></a>
-                    </div>
-                    <div class="box-nav">
-                        <img class="font-awesome" src="img/libreria.svg" alt="">
-                        <a href="#"><span class=".small">la tua libreria</span></a>
-                    </div>
-
                     <div class="playlist">
                         <h3>Playlist</h3>
                         <div class="create-playlist">
@@ -92,8 +92,8 @@
                 <!-- menu navigazione  -->
                 <nav>
                     <ul>
-                        <!-- !aggiungere trattino sotto link  -->
-                        <li><a href="#">in evidenza</a></li>
+
+                        <li class="stile"><a href="#">in evidenza</a></li>
                         <li><a href="#">podcast</a></li>
                         <li><a href="#">classifiche</a></li>
                         <li><a href="#">generi e mood</a></li>
